css/accordion.css
.tab-item{
	color: #929292 !important;
}

.tab-item-selected{
	 color: #3388cc !important;
}


#titleNavigation{
	text-align:center;
	font-size:20px;
margin-top: 12px;
}



/* Notifica urgente */
#notification-red-polo>h3>a, #notification-red-edificio>h3>a, #notification-red-piano>h3>a {
	background-color:red;
	color: white;
}

/* Notifica poco urgente */
#notification-yellow-polo>h3>a, #notification-yellow-edificio>h3>a, #notification-yellow-piano>h3>a {
	background-color:yellow;
	color: black;
}

/* Notifica non urgente */
body, input, select, textarea, button, .ui-btn {
font-size: 0.7em;
    line-height: 1.8em;
}

#notification-green-polo>h3>a, #notification-green-edificio>h3>a, #notification-green-piano>h3>a {
	background-color:green;
	color: black;
}



.statusAula{
	margin-left:30%;
}


.aula_occupata {
	vertical-align: middle;
    background: red none repeat scroll 0 0;
    border-radius: 55px;
    height: 15px;
    width: 15px;
}

.aula_libera {
	vertical-align: middle;
    background: green none repeat scroll 0 0;
    border-radius: 55px;
    height: 15px;
    width: 15px;
}




.cardImage {
    width: 30%;
	height: 30%;
}

.labelCard {
	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
	font-size: 1.1em;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
}

.textCard {
	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
	font-size: 1em;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
}

.univaqImage {
    display: block;
    margin: 0 auto;
}

.loginText {
	text-align: center;
}

.loginForm {
	margin: 15px;
}

.imageProfile {
	height: 40%;
	width: 40%;
	border-radius: 50%;
	display: block;
	margin: 0 auto;
}

.profileCard {
	margin: 20px;
}

.selectStatus {
	height: 200px;
}

.snap-drawers{
	margin-top: 25px;
}
.selectStatusText {
	text-align: center;
}

.imagePhoto {
	height: 40%;
	width: 95%;
	margin-top: 10px;
	margin-left: 10px;
}

.menuCalendar {
	margin-top: 53px;
	margin-bottom: 10px;
	margin-left: 10px;
	margin-right: 10px;
}

.followersImage {
	margin-bottom: -11px;
	width: 30px;
	height: 30px;
}

.profInUfficio {
	margin-top: 70px;
}

.infoFollowersNavigation
{
	/*background-color: green;*/
	margin-left: 60%;
}

.avvistaProfButton, .avvistaProfButton:active  {
	background-color: orange;
	border: 1px solid orange;
}

